/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-11-10
Change bov to D_CDM_EXT_BOV in if statement for reading FileFormat and 
define D_CDM_EXT_BOV_DATAFILE as dat
dfiファイルのFileFormatの読み込み判定文において、BOV形式であるかの
判定を"bov"からD_CDM_EXT_BOVに戻した。
また、BOV形式のデータファイルの拡張子を指定するマクロD_CDM_EXT_BOV_DATAFILEを
定義し、コード内のD_CDM_EXT_BOVをD_CDM_EXT_BOV_DATAFILEで置き換えた。
さらに、cdm_DFI_BOV.C、convOutput_BOV.Cにおいてファイル拡張子を"bov","dat"と
直接与えている部分があったので、マクロ名D_CDM_EXT_BOV、D_CDM_EXT_BOV_DATAFILE
で置き換えた。


------------------
2014-11-09
Change D_CDM_EXT_BOV to bov in if statement for reading FileFormat
dfiファイルのFileFormatの読み込み判定文において、BOV形式であるかの
判定をD_CDM_EXT_BOVから"bov"に変更した。

------------------
2014-11-07
Modify write_DataRecord in cdm_DFI_BOV
BOV形式のwrite_DataRecordにおいて、ベクトル成分⇒変数の個数に
対応できていない部分が残っていたので修正した。

------------------
2014-11-07
Remove temporary array setting in the case of mismatch of guide cells
メソッドWriteDataにおいて、WriteDataの引数で指定するガイドセル値と
DFI_Finfoのガイドセル値が一致しない場合、テンポラリに配列を作成する
ようにしていたが、それを作成しないようにした。その代わりに、WriteDataの
引数で指定するガイドセル値とDFI_Finfoのガイドセル値が一致しない場合は
エラーを返すようにした。

------------------
2014-11-05
Bug fix : write_XYZ(), write_GridData(), write_DataRecord(), read_DataRecord()
 - comment out 'ngrid', multi-grid format was incorrectly implemented
 - if there is no target directory, an XYZ file can not be written. Added MakeDirectory(dir).

------------------
2014-11-03
Bug fix DFI_Finfo.GuideCell
 - (DFI_Finfo.GuideCell>1) >>  (DFI_Finfo.GuideCell>0)

------------------
2014-11-02
Accept pull request from develop_plot3d

------------------
2014-10-31
Add API method WriteGridFile to output grid file and delete API method set_OutputGrid
PLOT3D形式やAVS形式において、座標ファイルを出力するための
APIメソッドWriteGridFileを作成した。
DFIの出力インスタンスからこのメソッドを呼べば、メソッドWriteDataを
介することなく座標ファイルが出力される。
また、前リビジョンで作成したAPIメソッドset_OutputGridは削除し、
DFIクラスのメンバ変数m_OutputGridも削除した。